docs/style.css
/* bestsellers css*/
::selection {
  background-color: rgba(255, 70, 70, 0.848);
  color: black;
}

.products{
    min-height: 100vh;
}

.pointer {
  left: 0;
  top: 0;
  transform: translate(-50%, -50%);
}

.item {
  display: inline-block;
  margin-right: 4vmin;
}

.exp-btn {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
  
  .card:hover .exp-btn {
      opacity: 1;
  } 
.dets-btn {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
  
  .banner-box{
    background: rgb(252,80,80);
background: linear-gradient(85deg, rgba(252,80,80,1) 0%, rgba(220,38,38,1) 100%);
  }
  
  /* top picks & bestseller RESPONSIVE */
  @media (min-width:461px) and (max-width:767px){
    .itm-dets h4 span{
      font-size: 2.3vmin;
    }
  }
  @media (max-width:991px){
      .item-cont{
          flex-wrap: wrap;
      }
  }
  @media (min-width:991px){
      .exp-btn{
          opacity: 0;
      }
  }

  @media (max-width:500px) {
    .banner-box{
      height: 8vh;
    }
    .banner-box h4{
      font-size: 4vmin;
    }
  }
  
  @media (min-width:525px) and (max-width:1023px) {
    .container
    .card{
      height: 40vh;
      width: 35vh;
    }

    .itm-cont
    .item{
      height: 45vh;
      width: 35vh;
    }
  }
  .banner-box{
    border-radius: 6vw;
    height: 10vh;
  }
  .banner-box h4{
    font-size: 3vmin;
  }

  @media (min-width:740) and (max-width:1023px) {
    .banner-box{
      height: 10vh;
    }
  } 
@media (max-width: 768px) {
  .products {
    display: flex;
    flex-direction: column;
  }
}

@media (max-width:1022px){
    .products{
        display: flex;
        flex-direction: column;
    }
    .products .item-cont{
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content: space-evenly;
      /* gap: 7vw; */
      /* padding: 3vw; */
    }
    .dets-btn {
      opacity: 1;
  } 
    .exp-btn{
      top: 5%;
      left: 15%;
    }
    .banner-box{
      border-radius: 6vw;
      height: 17vh;
    }
    .banner-box h4{
      font-size: 2vmin;
    }
}
@media (min-width:1023px){
  .products .item-cont {
    white-space: nowrap;
    overflow-x: auto;
  }
  
  .products .item {
    color: black;
  }
  
  .item-cont::-webkit-scrollbar {
    display: none;
  }

  .item-cont .item{
    height: 60vmin;
    width: 40vmin;
  }

  .item-cont .item img{
    height: 50vmin;
    width: 100%;
  }
  .dets-btn {
    opacity: 1;
} 
  .cart-btn{
    opacity: 1;
  }
  .card:hover .playback-btn{
    opacity: 1;
  }
  .card:hover .dets-btn {
    opacity: 1;
} 
  .exp-btn{
    opacity: 1;
    cursor: pointer;
  }
}

 

